<resources>
    <string name="app_name">lab3</string>
    <string name="cuboid">Cuboid</string>
    <string name="cube">Cube</string>
    <string name="coboid_width">width</string>
    <string name="cuboid_length">length</string>
    <string name="cuboid_height">height</string>
    <string name="enter">surface area</string>
    <string name="enter_v">volume</string>
    <string name="result">result:&#160;</string>
    <string name="cube_side">side</string>
</resources>